dfir_rs/tests/compile-fail-stable/surface_partition_badarg.rs
../compile-fail/surface_partition_badarg.rs